<resources>
    <string name="app_name">Daar-ul-Jannah</string>
    <string name="title_activity_prayer_guidance">PrayerGuidance</string>
    <string name="tab_text_1">Fajr</string>
    <string name="tab_text_2">Zuhar</string>
    <string name="tab_text_3">Asr</string>
    <string name="tab_text_4">Maghrib</string>
    <string name="tab_text_5">Isha</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!--Prayer Guidance Fajr Activity Button Name -->
    <!--Fajr-->
    <string name="pgfajrbtn1">2 Rakkat Sunnah \n Empahasized or Mu-akkdah</string>
    <string name="pgfajrbtn2">2 Rakkat Fard \n Mandatory</string>
    <!--Zuhar-->
    <string name="pgzuharbtn1">4 Rakkat Sunnah \n Empahasized or Mu-akkdah</string>
    <string name="pgzuharbtn2">4 Rakkat Fard \n Mandatory</string>
    <string name="pgzuharbtn3">2 Rakkat Sunnah \n Empahasized or Mu-akkdah</string>
    <string name="pgzuharbtn4">2 Rakkat Nafil \n Mustahab</string>
    <!--Asr-->
    <string name="pgasrbtn1">4 Rakkat Fard \n Mandatory</string>
    <!--Maghrib-->
    <string name="pgmaghribbtn1">3 Rakkat Fard \n Mandatory</string>
    <string name="pgmaghribbtn2">2 Rakkat Sunnah \n Empahasized or Mu-akkdah</string>
    <string name="pgmaghribbtn3">2 Rakkat Nafil \n Mustahab</string>
    <!--Isha-->
    <string name="pgishabtn1">4 Rakkat Sunnah \n Empahasized or Mu-akkdah</string>
    <string name="pgishabtn2">4 Rakkat Fard \n Mandatory</string>
    <string name="pgishabtn3">2 Rakkat Sunnah \n Empahasized or Mu-akkdah</string>
    <string name="pgishabtn4">2 Rakkat Nafil \n Mustahab</string>
    <string name="pgishabtn5">3 Rakkat Witr \n Wajib</string>
    <string name="pgishabtn6">2 Rakkat Nafil \n Mustahab</string>


    <!--Google Maps Working-->
    <string name="google_maps_API_key">AIzaSyCz4UCmnlDyHo_H_aOAF7yMrCuf0gNghdw</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_demo">DemoActivity</string>

    <string name="activity_title_home">Notes</string>
    <string name="msg_no_notes">No tasbihs found!</string>
    <string name="lbl_new_note_title">Add New Tasbih</string>
    <string name="lbl_edit_note_title">Edit Tasbih</string>
    <string name="hint_enter_note">Enter your Tasbih</string>
</resources>
