<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrayerGuidance$PlaceholderFragment">

    <Button
        android:id="@+id/pgzuharbtn1"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="156dp"
        android:text="@string/pgzuharbtn1"
        android:textColor="#894716"/>

    <Button
        android:id="@+id/pgzuharbtn2"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/pgzuharbtn2"
        android:textColor="#894716"/>

    <Button
        android:id="@+id/pgzuharbtn3"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="156dp"
        android:text="@string/pgzuharbtn3"
        android:textColor="#894716"/>

    <Button
        android:id="@+id/pgzuharbtn4"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/pgzuharbtn4"
        android:textColor="#894716"/>

</android.support.constraint.ConstraintLayout>