<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrayerGuidance$PlaceholderFragment">

    <Button
        android:id="@+id/pgmaghribbtn1"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="81dp"
        android:text="@string/pgmaghribbtn1"
        android:textColor="#894716"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="98dp" />

    <Button
        android:id="@+id/pgmaghribbtn2"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:text="@string/pgmaghribbtn2"
        android:textColor="#894716"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="175dp" />

    <Button
        android:id="@+id/pgmaghribbtn3"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/pgmaghribbtn1"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="260dp"
        android:text="@string/pgmaghribbtn3"
        android:textColor="#894716"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="261dp" />

</RelativeLayout>